# vk_raii

./: Cargo.toml
examples/: init.rs
examples/data/: compute_test.comp.spv
src/: DebugReport.rs  buffer.rs  command_buffer.rs  command_pool.rs  debug_report.rs  descr_pool.rs  descr_set.rs  descr_set_layout.rs  device.rs  fence.rs  instance.rs  lib.rs  memory.rs  pipeline.rs  pipeline_cache.rs  pipeline_layout.rs  queue.rs  render_pass.rs  sampler.rs  shader_module.rs  surface.rs  swapchain.rs
