[package]
name = "vk_raii"
version = "0.1.0"
authors = ["KirFed <f3lkilo@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32.1"
env_logger = "0.8.2"
log = "0.4.11"

[dev-dependencies]
ash-window = "0.6.0"
winit = "0.24.0"
raw-window-handle = "0.3.3"